Fix main element y overflow

--- a/betta-0.0.3.scss
+++ b/betta-0.0.3.scss
@@ -68,6 +68,7 @@ body {
 main {
 	padding: 3rem 2rem;
 	overflow-x: hidden;
+    overflow-y: visible;
 }
 
 main {
